# CC_EX

./: .gitignore  01_论文写作方案_TIMC_DAR_TD3BC.md  02_代码实施方案_DAR_TD3BC.md  CONTEXT.md  chat.md  deep-research-report.md
code/: EXPERIMENT_ENVIRONMENT.txt  NEXT_OPERATIONS.md  README.md  pyproject.toml  run.ps1  run_full_paper.ps1
code/configs/model/: dar_td3bc.yaml  td3bc_mlp.yaml
code/data/metadata/: pipeline_manifest.json  pipeline_validation_report.md
code/results/reported/: neorl2_pipeline_official.csv
code/scripts/: acquire_data.py  aggregate_results.py  check_next_operation.py  evaluate.py  evaluate_rollout.py  import_reported_baselines.py  prepare_pipeline_data.py  pretrain_encoder.py  run_ablation.py  run_robustness.py  train_behavior_policy.py  train_dar_td3bc.py  train_td3bc.py  write_environment_txt.py
code/src/dar_td3bc/: __init__.py
code/src/dar_td3bc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
code/src/dar_td3bc/data/: __init__.py  (+4 more)
code/tests/: test_acquire_data_script.py  test_checkpoint_policy.py  test_control_metrics.py  test_device.py  test_env_wrappers.py  test_evaluation_aggregation.py  test_fast_batch_sampler.py  test_losses.py  test_models.py  test_normalization.py  test_obs_parser.py  test_offline_rl_training.py  test_parallel_commands.py  test_pipeline_dataset.py  test_powershell_runners.py  test_progress.py  test_provenance.py  test_readiness.py  test_reproducibility.py  test_rollout_evaluation.py  test_run_utils.py  test_scripts.py  test_supervised_training.py  test_temporal_encoder.py  test_torch_dataset.py  test_trajectory_index.py
(+22 files in other folders)
